[package]
name = "puppy-fetch"
version = "0.1.0"
edition = "2024"
description= "A tool to intersect git references."

license = "MIT"
repository = "https://github.com/puppy-tools/puppy-fetch"

[dependencies]
clap = { version = "4.5.41", features = ["cargo", "derive"] }
env_logger = "0.11.8"
git2 = "0.20.2"
log = "0.4.27"
regex = "1.11.1"
